2001-07-28  Tambet Ingo  <tambet@ximian.com>

	* x.pl.in (x_update_display_mode): Chop off additional space.

	* boot.pl.in (xst_boot_conf_is_image): Try default label also.
	(xst_boot_conf_delete_image): Fixed bug of deletion of last image.
	(xst_boot_conf_edit_image): Quote values which have '=' mark.
	(xst_boot_conf_add_image): Ditto.
	(_lilo_fix_images): New. Add 'label' field if it's missing.
	(xst_boot_conf_fix): New.

	* boot-conf.in (set): Don't flush conf file if XML was invalid or missing.

2001-07-26  Tambet Ingo  <tambet@ximian.com>

	* x.pl.in (x_update_display_mode): Remove extra space from we added before.

2001-07-26  Hans Petter Jansson  <hpj@ximian.com>

	* display-conf.in: Add debian-2.2 to supported platforms. Tested and
	  working.

	* print-conf.in: Remove debian-2.2 from supported platforms. This
	  is officially not supported yet.

2001-07-26  Tambet Ingo  <tambet@ximian.com>

	* display-conf.in (test): Oops, forogt that.

	* x.pl.in (x_config_fix): Support XFree86 v3 also.

	* display-conf.in (xml_print): ditto.

Wed Jul 25 03:45:51 2001  Arturo Espinosa Aldama  <arturo@ximian.com>

	* package-conf.in (get_package): missing comma.

	* mouse-conf.in: mouse.pl doesn't exist. Can't require it.

	* Makefile.am: Also s/___version___/$(VERSION)/.
	* *-conf.in: Removed arbitrary value for $version and
	assigned "___version___" instead. #3090 fixed.

	* boot.pl.in (xst_boot_conf_edit_image): Removed append
	key special case for quoting. Quote values only if they
	contain spaces and are not already quoted.
	(xst_boot_conf_add_image): same.

	* replace.pl.in (xst_replace_from_table): If interpolation
	failed, go to next feature. Failed interpolations return
	arguments that make no sense.
	(xst_replace_kw): Wasn't getting $value arg (!). This affected
	Debian ppp option replacing and possibly other places.

	* parse.pl.in (xst_parse_replace_hash_values): Return 1/0
	if interpolation succeeded.